--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="uft-8">
-		<title>Home page</title>
+		<title>Some Website</title>
 	</head>
 	<body>
 		{{> header}}
