--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="uft-8">
-		<title>{{pageTitle}}</title>
+		<title>Some website</title>
 	</head>
 	<body>
 		{{> header}}
